--- a/gioithieu.html
+++ b/gioithieu.html
@@ -105,7 +105,7 @@
           <ul
             class="menu-list d-flex justify-content-evenly alignsalign-items-center m-0 p-0"
           >
-            <li class="menu-list-item d-block py-2 active-chon">
+            <li class="menu-list-item d-block py-2">
               <a
                 href="index.html"
                 class="menu-link text-decoration-none text-white"
@@ -113,7 +113,7 @@
                 <i class="fa-solid fa-house text-white"></i
               ></a>
             </li>
-            <li class="menu-list-item d-block py-2">
+            <li class="menu-list-item d-block py-2  active-chon">
               <a
                 href="./gioithieu.html"
                 class="menu-link text-decoration-none text-white"
@@ -156,7 +156,7 @@
               >
             </li>
             <li class="menu-list-item d-block py-2">
-              <a href="lienhe" class="menu-link text-decoration-none text-white"
+              <a href="lienhe.html" class="menu-link text-decoration-none text-white"
                 >LIÊN HỆ</a
               >
             </li>
