--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               >
             </li>
             <li class="menu-list-item d-block py-2">
-              <a href="lienhe" class="menu-link text-decoration-none text-white"
+              <a href="lienhe.html" class="menu-link text-decoration-none text-white"
                 >LIÊN HỆ</a
               >
             </li>
