--- a/tracuu.html
+++ b/tracuu.html
@@ -120,7 +120,7 @@
                 >GIỚI THIỆU</a
               >
             </li>
-            <li class="menu-list-item d-block py-2">
+            <li class="menu-list-item d-block py-2  active-chon">
               <a
                 href="tracuu.html"
                 class="menu-link text-decoration-none text-white"
@@ -134,7 +134,7 @@
                 >TIN TUC</a
               >
             </li>
-            <li class="menu-list-item d-block py-2 active-chon">
+            <li class="menu-list-item d-block py-2">
               <a
                 href="./tainguyen.html"
                 class="menu-link text-decoration-none text-white"
@@ -167,158 +167,27 @@
     <div class="content container">
       <div class="row">
         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-          <p
-            style="
-              border-bottom: 2px solid red;
-              color: red;
-              padding: 10px 0;
-              font-size: 18px;
-              font-weight: bold;
-            "
-          >
-            TÀI NGUYÊN
-          </p>
-          <div class="mt-2">
-            <input
-              type="text"
-              placeholder="Nhập từ khóa tìm kiếm"
-              class="form-control"
-            />
-          </div>
-          <div class="d-flex justify-content-between mt-3">
-            <div class="s_categoryLeft">
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/50-xay-dung-va-phat-trien-c16575.aspx">
-                  Dề thi - chuyên đề</a
+            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <p
+                  style="
+                    border-bottom: 2px solid red;
+                    color: red;
+                    padding: 10px 0;
+                    font-size: 18px;
+                    font-weight: bold;
+                  "
                 >
-              </p>
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/doan-thanh-nien-c16577.aspx"> Sáng kiến kinh nghiệm</a>
-              </p>
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/nha-truong-c16611.aspx"> Sách hay</a>
-              </p>
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/tin-video-c18928.aspx"> Phần mềm</a>
-              </p>
-            </div>
-            <div class="s_categoryRight">
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/cong-doan-c16576.aspx"> Sách hay</a>
-              </p>
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/to-chuyen-mon-c16578.aspx"> Nhịp cầu tri thức</a>
-              </p>
-              <p>
-                <img
-                  src="https://thptlexoay.vinhphuc.edu.vn/App_Themes/Default/Image/iconDauTien.png"
-                />
-                <a href="/cau-lac-bo-huu-tri-c19934.aspx">
-                  Câu lạc bộ hưu trí</a
-                >
-              </p>
-            </div>
-          </div>
-          <p>
-            <span style="font-weight: bold; color: black"
-              >Dạy học tác phẩm Tây Tiến - Quang Dũng theo hướng tích hợp liên
-              môn</span
-            >
-            <i class="fa-solid fa-clock"></i> 16/2/2022
-          </p>
-          <img
-            src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/kienlx/12-fileminimizer.jpg?w=300"
-            alt=""
-          />
-          <hr />
-          <div class="d-flex border-bottom pb-3 mt-3">
-            <img
-              class="me-3"
-              src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/mathquang/khu.jpg?w=130"
-              alt=""
-            />
-            <p>
-              <span style="font-weight: bold; color: black">
-                Giao lưu bóng rổ giữa THPT Lê Xoay và THPT Yên lạc môn</span
-              >
-              <i class="fa-solid fa-clock"></i> 16/2/2022
-            </p>
-            <hr />
-          </div>
-          <div class="d-flex border-bottom pb-3 mt-3">
-            <img
-              class="me-3"
-              src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/kienlx/fdfd.jpg?w=130"
-              alt=""
-            />
-            <p>
-              <span style="font-weight: bold; color: black">
-                Chung kết kéo co k12 giữa 12a2 và 12a6 13/11/2018
-              </span>
-              <i class="fa-solid fa-clock"></i> 16/2/2022
-            </p>
-            <hr />
-          </div>
-          <div class="d-flex border-bottom pb-3 mt-3">
-            <img
-              class="me-3"
-              src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/kienlx/a.jpg?w=130"
-              alt=""
-            />
-            <p>
-              <span style="font-weight: bold; color: black"
-                >Hội thảo chuyên đề đổi mới sinh hoạt chuyên môn cấp THPT
-                12/11/2018</span
-              >
-              <i class="fa-solid fa-clock"></i> 16/2/2022
-            </p>
-          </div>
-          <div class="d-flex border-bottom pb-3 mt-3">
-            <img
-              class="me-3"
-              src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/datlx/V%C4%83n%20b%E1%BA%A3n.jpg?w=130"
-              alt=""
-            />
-            <p>
-              <span style="font-weight: bold; color: black"
-                >Dạy học tác phẩm Tây Tiến - Quang Dũng theo hướng tích hợp liên
-                môn</span
-              >
-              <i class="fa-solid fa-clock"></i> 16/2/2022
-            </p>
-          </div>
-          <div class="d-flex border-bottom pb-3 mt-3">
-            <img
-              class="me-3"
-              src="https://fn.vinhphuc.edu.vn/UploadImages/thptlexoay/datlx/45925113_2170558529629269_8545748677128355840_n.jpg?w=130"
-              alt=""
-            />
-            <p>
-              <span style="font-weight: bold; color: black"
-                >Hoạt động chào mừng</span
-              >
-              <i class="fa-solid fa-clock"></i> 16/2/2022
-            </p>
-            <hr />
-          </div>
+                  TRA CỨU ĐIỂM THI
+                </p>
+                <div class="mt-2">
+                  <input
+                    type="text"
+                    placeholder="Nhập từ khóa tìm kiếm"
+                    class="form-control"
+                  />
+                </div>
+         
+              </div>
         </div>
 
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 mt-3">
